--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/SensibleThingsPlatformCore"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/SensibleThingsPlatformImpl"/>
+	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/bcprov-ext-jdk15on-150.jar"/>
+	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/bcprov-jdk15on-150.jar"/>
+	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/commons-configuration-1.10.jar"/>
+	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/commons-logging-1.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/sqlite-jdbc-3.7.15-M1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
