--- a/.classpath
+++ b/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/commons-logging-1.1.3.jar"/>
 	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/sqlite-jdbc-3.7.15-M1.jar"/>
+	<classpathentry kind="lib" path="lib/bcpkix-jdk15on-150.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
