--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SensibleThingsPlatformCore"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/SensibleThingsPlatformImpl"/>
@@ -11,5 +12,6 @@
 	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/commons-logging-1.1.3.jar"/>
 	<classpathentry kind="lib" path="/Users/ailtex/Documents/workspace/SensibleThingsPlatformSecurity/lib/sqlite-jdbc-3.7.15-M1.jar"/>
 	<classpathentry kind="lib" path="lib/bcpkix-jdk15on-150.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
